...
          tabBarIcon: ({ color }) => <Icon name="calculator" color={color} />
        }}
      />
      <Tabs.Screen
        name="settings"
        options={{
          title: 'Ajustes',
          tabBarIcon: ({ color }) => <Icon name="settings" color={color} />
        }}
      />
    </Tabs>
  )
}
...
